# Sasiska-s-shell

./: .gitignore  CMakeLists.txt  Makefile  README.md  cronfs.cpp  sasiska_shell.deb  shell.cpp  test.cpp
package/DEBIAN/: control
sasiska_shell/DEBIAN/: control
